updated install script